# libyuv-study

./: CMakeLists.txt  README.md  main.c
resources/: ffmpeg.sh  rainbow-yuv420p-blend.yuv  rainbow-yuv420p-clip-0-0.yuv  rainbow-yuv420p-rotation-90-mirror.yuv  rainbow-yuv420p-rotation-90.yuv  rainbow-yuv420p-scale-6.yuv
